# manifestfuse

./: README.md  pyproject.toml
src/manifestfuse/: __init__.py  cli.py  config.py  discover.py  extractors.py  fingerprints.py  graph.py  reporter.py
tests/: test_extractors.py
